--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+autopep8 = "*"
+isort = "*"
+autoflake = "*"
+pytest = "*"
 
 [packages]
 instagram-private-api-1-6-0 = {git = "https://git@github.com/ping/instagram_private_api.git",ref = "1.6.0"}
@@ -14,3 +19,5 @@ python_version = "3.6"
 
 [scripts]
 main = "python main.py"
+lint = "flake8 main.py ignotify/"
+format = '$SHELL -c "autopep8 -ri main.py ignotify/; autoflake -ri --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports ignotify/; isort -rc main.py ignotify/"'
